Update sidebar: remove glitching after clicking the tab, fixing togle the parent tab, add word-break on the tabs

--- a/css/style.scss
+++ b/css/style.scss
@@ -380,6 +380,10 @@ pre > code {
 
 
 /* Sidebar */
+#sidebar {
+    scroll-behavior: smooth;
+}
+
 .collapse-parent {
     cursor: pointer;
 }
@@ -478,6 +482,12 @@ pre > code {
     bottom: 0;
     left: 0;
     z-index: 3;
+}
+
+a.tab-link {
+    word-wrap: break-word;
+    white-space: normal;
+    font-weight: normal;
 }
 
 dt {
